syntax = "proto3";

package item.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nakatanakatana/feed-reader/gen/go/item/v1;itemv1";

service ItemService {
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc UpdateItemStatus(UpdateItemStatusRequest) returns (UpdateItemStatusResponse);
}

message Item {
  string id = 1;
  string url = 2;
  string title = 3;
  string description = 4;
  string published_at = 5;
  string feed_id = 6;
  bool is_read = 7;
  string author = 9;
  string content = 10;
  string image_url = 11;
  string categories = 12;
  string created_at = 13;
}

message ListItem {
  string id = 1;
  string title = 2;
  string description = 3;
  string published_at = 4;
  string created_at = 5;
  bool is_read = 6;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message ListItemsRequest {
  optional string feed_id = 1;
  optional bool is_read = 2;
  optional string tag_id = 7;
  optional google.protobuf.Timestamp published_since = 8;

  enum SortOrder {
    SORT_ORDER_UNSPECIFIED = 0;
    SORT_ORDER_DESC = 1;
    SORT_ORDER_ASC = 2;
  }
  SortOrder sort_order = 4;

  int32 limit = 5;
  int32 offset = 6;
}

message ListItemsResponse {
  repeated ListItem items = 1;
  int32 total_count = 2;
}

message UpdateItemStatusRequest {
  repeated string ids = 1;
  optional bool is_read = 2;
}

message UpdateItemStatusResponse {}
